Table "users" {
  "user_id" text [pk, not null, default: `(uuid_generate_v4())::text`]
  "username" text
  "name" text
  "start_time_utc" timestamp
  "bot_language" text [default: 'en']
  "user_font_size" text [default: 'default']
  "user_font" text [default: 'default']
  "user_border_style" text [default: 'default']
  "default_language" text [default: 'default']
  "default_resolution" text [default: 'default']
  "transcribe" text [default: 'default']
  "subtitle_choice" text [default: 'default']
  "available_minutes" int4 [default: 90]
  "email" text
  "password" text
  "email_confirmed" bool [default: false]
}

Table "videos" {
  "id" int4 [pk, not null, increment]
  "user_id" text [not null]
  "username" text
  "name" text
  "result_link" text [not null]
  "sent_time_utc" timestamp [not null]
  "duration_min" int4
  "resolution" text
  "selected_language" text
  "is_transcription" bool
  "original_video_link" text
  "thumbnail_url" text
}

Table "reset_confirm_tokens" {
  "token" varchar(36) [pk, not null]
  "user_id" text
  "expires_at" timestamp [not null]
}

Ref "reset_confirm_tokens_user_id_fkey":"users"."user_id" < "reset_confirm_tokens"."user_id"

Ref "videos_user_id_fkey":"users"."user_id" < "videos"."user_id"
